--- a/A/Altice/Altice_Fall2020/ads/OPT_SECO_49(60Mbps)/300x250/300x250_frame1.html
+++ b/A/Altice/Altice_Fall2020/ads/OPT_SECO_49(60Mbps)/300x250/300x250_frame1.html
@@ -151,8 +151,7 @@ amo.registerAttribute("ctaText","TEXT","Learn more");
 amo.registerAttribute("frameImage2","IMAGE","300x250_SECO_AUGUST_ACQ_INT_60Mb_491Yr_Image_frame3.png");
 amo.registerAttribute("frameImage3","IMAGE","300x250_SECO_AUGUST_ACQ_INT_60Mb_491Yr_Image_frame4.png");
 amo.registerAttribute("frameImage4","IMAGE","300x250_SECO_AUGUST_ACQ_INT_60Mb_491Yr_Image_frame5.png");
-amo.registerAttribute("frameText1","TEXT","Service Electric has joined the Optimum family!");
-amo.registerAttribute("frameText12","TEXT","Stay up to<br>speed with our fast Internet");
+amo.registerAttribute("frameText1", "TEXT", "Switch to a faster Internet connection");
 amo.registerAttribute("frameText21", "TEXT", "<div style='top: 42px;left: 49px;font-size: 19.5px;line-height: 1;color: #fff;'>60 Mbps<br>Internet</div>");
 amo.registerAttribute("frameText22", "TEXT", "<div style='top: 85px;left: 44px;width: 160px;color: #fff;line-height: 1;'><font style='font-size: 65px;letter-spacing: -1.2px;'>$49</font><font style='margin-left: 4px;font-size: 11px;display: inline-block;vertical-align: 25px;line-height: 1.1;'>82/<br>mo.</font><div class='AlticeRegular' style='margin: 1px 0 0 6px;font-size: 10px;line-height: 1.1;'>Plus taxes, fees &<br>optional services</div></div>");
 amo.registerAttribute("frameText23", "TEXT", "<div class='AlticeRegular' style='top:186px;left:11px;font-size:8px;line-height:1.15;color: #fff;'>Wired connection up to 60 Mbps.<br>WiFi speeds may vary.</div>");
@@ -217,7 +216,7 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 165px;left: 23px;
       opacity:1;">
       <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
       <div id="frameVideo1" style="top: 0px;left: 0px;width: inherit;height: inherit;"><video muted playsinline autoplay style="width:100%;"></video></div>
-      <div id="videoOverlay" style="top:0px; left:0px; width:inherit; height:inherit; background-color:rgba(0,0,0,0.25)"></div>
+      <!-- <div id="videoOverlay" style="top:0px; left:0px; width:inherit; height:inherit; background-color:rgba(0,0,0,0.25)"></div> -->
       <!-- <div id="frameImage1" class="asset adSizeContainer" data-image="frameImage1"></div> -->
       <!-- <div id="shape1"
         style="top: 0;
@@ -238,22 +237,11 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 165px;left: 23px;
       <div id="frameText1" class="text AlticeBold"
         data-text="frameText1"
         data-style="text-align:center;"
-        style="top: 76px;
+        style="top: 4px;
           left: 20px;
           width: 260px;
-          height: 120px;
-          font-size: 28.6px;
-          line-height: 1;
-          color:#fff;">
-      </div>
-      <div id="frameText12" class="text AlticeBold"
-        data-text="frameText12"
-        data-style="text-align:center;"
-        style="top: 76px;
-          left: 20px;
-          width: 260px;
-          height: 120px;
-          font-size: 28.6px;
+          height: 60px;
+          font-size: 24.6px;
           line-height: 1;
           color:#fff;">
       </div>
@@ -397,19 +385,12 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 165px;left: 23px;
         }
         var animateFrame1 = function(flag){
           ad.layers.frameVideo1.querySelector('video').onplay = function(){
-            gsap.set('#frameText1', {x: '0'});
             gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
             .to('#frameText1', {autoAlpha:1})
-            .to('#frameText1', {autoAlpha:0,delay:2.7})
-            .to('#frameText12', {autoAlpha:1})
-            gsap.to('#shape1', {y:'0',ease:'none',duration:0.7,delay:2.8})
-            gsap.to('#shape2', {y:'0',ease:'none',duration:0.7,delay:3})
-            gsap.to('#shape3', {y:'0',ease:'none',duration:0.7,delay:3})
-            gsap.to('#shape4', {y:'0',ease:'none',duration:0.7,delay:3.3})
           }
           ad.layers.frameVideo1.querySelector('video').onended = function(){
             gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .to('#frame1', (flag==true?{}:{delay:1.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
+            .to('#frame1', (flag==true?{}:{delay:0.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
           }
         }
         gsap.delayedCall(.8, animateFrame1, [true]);
