--- a/A/Altice/Altice_Fall2020/ads/OPT_SECO_49(60Mbps)/300x50/300x50_frame4.html
+++ b/A/Altice/Altice_Fall2020/ads/OPT_SECO_49(60Mbps)/300x50/300x50_frame4.html
@@ -106,7 +106,7 @@ amo.registerAttribute("frameImage1", "IMAGE", "300x50_SECO_AUGUST_ACQ_INT_60Mb_4
 amo.registerAttribute("frameImage2","IMAGE","1x1.png");
 amo.registerAttribute("frameImage3","IMAGE","300x50_SECO_AUGUST_ACQ_INT_60Mb_491Yr_Image_frame4.png");
 amo.registerAttribute("frameImage4","IMAGE","1x1.png");
-amo.registerAttribute("frameText1","TEXT","Service Electric has joined<br>the Optimum Family!");
+amo.registerAttribute("frameText1","TEXT","Switch to a faster<br>Internet connection");
 amo.registerAttribute("frameText21", "TEXT", "<div style='top:3px;left:7px;font-size:13px;'>60 Mbps Internet</div>");
 amo.registerAttribute("frameText22", "TEXT", "<div style='top: 19px;left: 6px;width: 220px;line-height: 1;'><font style='font-size: 27.5px;' class='coloredText'>$49</font><font style='margin-left: 2px;font-size: 9px;display: inline-block;vertical-align: 4px;'>82/<br>mo.</font><div class='AlticeRegular' style='margin: -13px 0 0 77px;font-size: 7px;'>Plus taxes, fees & optional services</div></div>");
 amo.registerAttribute("frameText23", "TEXT", "&nbsp;");
