--- a/A/Altice/Altice_Fall2020/ads/OPT_SECO_49(60Mbps)/300x600/300x600_frame1.html
+++ b/A/Altice/Altice_Fall2020/ads/OPT_SECO_49(60Mbps)/300x600/300x600_frame1.html
@@ -133,8 +133,7 @@ amo.registerAttribute("ctaText","TEXT","Learn more");
 amo.registerAttribute("frameImage2","IMAGE","300x600_SECO_AUGUST_ACQ_INT_60Mb_491Yr_Image_frame3.png");
 amo.registerAttribute("frameImage3","IMAGE","300x600_SECO_AUGUST_ACQ_INT_60Mb_491Yr_Image_frame4.png");
 amo.registerAttribute("frameImage4","IMAGE","300x600_SECO_AUGUST_ACQ_INT_60Mb_491Yr_Image_frame5.png");
-amo.registerAttribute("frameText1","TEXT","Service Electric has joined the Optimum family!");
-amo.registerAttribute("frameText12","TEXT","Stay up to<br>speed with our fast Internet");
+amo.registerAttribute("frameText1","TEXT","Switch to a faster Internet connection");
 amo.registerAttribute("frameText21", "TEXT", "<div style='top: 90px;left: 29px;font-size: 28px;line-height:1;color: #fff;'>60 Mbps<br>Internet</div>");
 amo.registerAttribute("frameText22", "TEXT", "<div style='top: 142px;left: 20px;width: 280px;color: #fff;line-height: 1;'><font style='font-size: 117px;letter-spacing: -2px;'>$49</font><font style='margin-left: 8px;font-size: 19px;display: inline-block;vertical-align: 50px;line-height: 0.9;'>82/<br>mo.</font><div class='AlticeRegular' style='margin: 3px 0 0 10px;font-size: 14px;'>Plus taxes, fees &<br>optional services</div></div>");
 amo.registerAttribute("frameText23", "TEXT", "<div class='AlticeRegular' style='top:297px;left:31px;font-size:14px;line-height:1.1;color: #fff;'>Wired connection<br>up to 60 Mbps.<br>WiFi speeds may vary.</div>");
@@ -199,7 +198,7 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 293px;left: 22px;
       opacity:1;">
       <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
       <div id="frameVideo1" style="top: 0px;left: 0px;width: 300px;height: 290px;"><video muted playsinline autoplay style="width:100%;"></video></div>
-      <div id="videoOverlay" style="top:0px; left:0px; width:inherit; height:290px; background-color:rgba(0,0,0,0.2)"></div>
+      <!-- <div id="videoOverlay" style="top:0px; left:0px; width:inherit; height:290px; background-color:rgba(0,0,0,0.2)"></div> -->
       <!-- <div id="frameImage1" class="asset adSizeContainer" data-image="frameImage1"></div> -->
       <!-- <div id="shape1"
         style="top: 0;
@@ -221,21 +220,11 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 293px;left: 22px;
         data-text="frameText1"
         data-style="text-align:center;"
         style="top: 318px;
-          left: 20px;
-          width: 260px;
-          height: 150px;
-          font-size: 32px;
-          line-height: 1.1;">
-      </div>
-      <div id="frameText12" class="text-top AlticeBold"
-        data-text="frameText12"
-        data-style="text-align:center;"
-        style="top: 318px;
-          left: 20px;
-          width: 260px;
-          height: 150px;
-          font-size: 32px;
-          line-height: 1.1;">
+          left: 15px;
+          width: 270px;
+          height: 180px;
+          font-size: 36px;
+          line-height: 1;">
       </div>
       <div id="shape1" class="shape" style="border-radius: 50px;background-image: linear-gradient(to top, #24d9c3, #0084d6);"></div>
       <div id="shape2" class="shape" style="border-radius: 50px;background-image: linear-gradient(to top, #24d9c3, #0084d6);"></div>
@@ -375,19 +364,12 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 293px;left: 22px;
         }
         var animateFrame1 = function(flag){
           ad.layers.frameVideo1.querySelector('video').onplay = function(){
-            gsap.set('#frameText1', {x: '0'});
             gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
             .to('#frameText1', {autoAlpha:1})
-            .to('#frameText1', {autoAlpha:0,delay:2.2})
-            .to('#frameText12', {autoAlpha:1})
-            gsap.to('#shape1', {y:'0',ease:'none',duration:0.9,delay:2.2})
-            gsap.to('#shape2', {y:'0',ease:'none',duration:0.9,delay:2.4})
-            gsap.to('#shape3', {y:'0',ease:'none',duration:0.9,delay:2.4})
-            gsap.to('#shape4', {y:'0',ease:'none',duration:0.9,delay:2.7})
           }
           ad.layers.frameVideo1.querySelector('video').onended = function(){
             gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .to('#frame1', (flag==true?{}:{delay:1.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
+            .to('#frame1', (flag==true?{}:{delay:0.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
           }
         }
         gsap.delayedCall(.8, animateFrame1, [true]);
