--- a/A/Altice/Altice_Fall2020/ads/OPT_SECO_49(60Mbps)/728x90/728x90_frame1.html
+++ b/A/Altice/Altice_Fall2020/ads/OPT_SECO_49(60Mbps)/728x90/728x90_frame1.html
@@ -133,8 +133,7 @@ amo.registerAttribute("ctaText","TEXT","Learn more");
 amo.registerAttribute("frameImage2","IMAGE","1x1.png");
 amo.registerAttribute("frameImage3","IMAGE","728x90_SECO_AUGUST_ACQ_INT_60Mb_491Yr_Image_frame4.png");
 amo.registerAttribute("frameImage4","IMAGE","1x1.png");
-amo.registerAttribute("frameText1","TEXT","Service Electric has joined<br>the Optimum Family!");
-amo.registerAttribute("frameText12","TEXT","Stay up to speed with<br>our fast Internet");
+amo.registerAttribute("frameText1","TEXT","Switch to a faster<br>Internet connection");
 amo.registerAttribute("frameText21", "TEXT", "<div style='top: 12px;left: 23px;font-size: 26.2px;line-height: 0.9;'>60 Mbps<br>Internet</div>");
 amo.registerAttribute("frameText22", "TEXT", "<div style='top: 3px;left: 132px;width: 350px;line-height: 1;'><font style='font-size: 84px;' class='coloredText'>$49</font><font style='margin-left: 5px;font-size: 13px;display: inline-block;vertical-align: 34px;line-height: 1.2;'>82/<br>mo.</font><div class='AlticeRegular' style='position: absolute;top: 47px;left: 156px;font-size: 10px;'>Plus taxes, fees & optional services.</div></div>");
 amo.registerAttribute("frameText23", "TEXT", "<div class='AlticeRegular' style='top:61px;left:288px;font-size:10px;line-height:1.2;'>Wired connection up to 60 Mbps.<br>WiFi speeds may vary.</div>");
@@ -218,15 +217,6 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 66px;left: 289px;
       </div> -->
       <div id="frameText1" class="text-left AlticeBold"
         data-text="frameText1"
-        style="top: 5px;
-          left: 25px;
-          width: 400px;
-          height: 80px;
-          font-size: 26px;
-          line-height: 1.1;">
-      </div>
-      <div id="frameText12" class="text-left AlticeBold"
-        data-text="frameText12"
         style="top: 5px;
           left: 25px;
           width: 400px;
@@ -365,9 +355,7 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 66px;left: 289px;
           gsap.set('#frameText1', {x: '0'});
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           .to('#frameText1', {autoAlpha:1})
-          .to('#frameText1', {autoAlpha:0,delay:2.5})
-          .to('#frameText12', {autoAlpha:1})
-          .to('#frame1', (flag==true?{}:{delay:2.5, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
+          .to('#frame1', (flag==true?{}:{delay:3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
           // gsap.to('#shape1', {y:'0',ease:'none',duration:0.7,delay:1.6})
           // gsap.to('#shape2', {y:'0',ease:'none',duration:0.7,delay:1.8})
           // gsap.to('#shape3', {y:'0',ease:'none',duration:0.7,delay:1.8})
